--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/material": "^6.1.7",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
